# Semantic-Scene-Boundary-Detection-through-Temporal-Novelty-in-Dense-Visual-Embeddings

./: .gitignore  README.md  THESIS.md  pyproject.toml  requirements.txt
bench/: README.md  baselines.py  bbc.py  charades.py  combine.py  custom.py  fetch_charades.py  fetch_kinetics_gebd.py  kinetics_gebd.py  metrics.py  sweep.py
src/: features.py  keyframes.py  main.py  novelty.py  sampling.py  viewer.py  viz.py
tests/: test_novelty.py  test_viewer.py
