[project]
name = "semantic-scene-boundary-detection-through-temporal-novelty-in-dense-visual-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=12.0",
    "huggingface-hub>=0.24",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "scipy>=1.11",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
    "transformers>=4.44",
]
